--- a/NguyenHongHiepWPF/NguyenHongHiepWPF.csproj
+++ b/NguyenHongHiepWPF/NguyenHongHiepWPF.csproj
@@ -15,4 +15,10 @@
     <Folder Include="ViewModels\" />
   </ItemGroup>
 
+  <ItemGroup>
+    <None Update="appsettings.json">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
+  </ItemGroup>
+
 </Project>
