--- a/NguyenHongHiepWPF/appsettings.json
+++ b/NguyenHongHiepWPF/appsettings.json
@@ -1,4 +1,9 @@
 {
+  "AdminAccount": {
+    "UserName": "",
+    "Password": "",
+    "Role": 1
+  },
   "ConnectionStrings": {
     "FUCarRentingManagementDB": "server=(local);database=FUCarRentingManagement;uid=sa;pwd=123456;TrustServerCertificate=True"
   }
