changed database key in appsetting file

--- a/NguyenHongHiepWPF/appsettings.json
+++ b/NguyenHongHiepWPF/appsettings.json
@@ -1,10 +1,10 @@
 {
   "AdminAccount": {
-    "UserName": "",
-    "Password": "",
+    "Email": "admin@FUCarRentingSystem.com",
+    "Password": "@@admin@@",
     "Role": 1
   },
   "ConnectionStrings": {
-    "FUCarRentingManagementDB": "server=(local);database=FUCarRentingManagement;uid=sa;pwd=123456;TrustServerCertificate=True"
+    "DB": "server=(local);database=FUCarRentingManagement;uid=sa;pwd=123456;TrustServerCertificate=True"
   }
 }
