done login and register UI

--- a/NguyenHongHiep_NET1601_A02/NguyenHongHiepRazorPages/appsettings.json
+++ b/NguyenHongHiep_NET1601_A02/NguyenHongHiepRazorPages/appsettings.json
@@ -8,8 +8,8 @@
   "AllowedHosts": "*",
   "AdminAccount": {
     "Email": "admin@FUCarRentingSystem.com",
-    "Password": "@@admin@@",
-  }
+    "Password": "@@admin@@"
+  },
   "ConnectionStrings": {
     "DB": "server=(local);database=FUCarRentingManagement;uid=sa;pwd=123456;TrustServerCertificate=True;"
   }
